[tool.poetry]
name = "plaid2qif"
version = "1.3.4"
description = "Download financial transactions from Plaid as QIF files."
authors = ["Edward Q. Bridges <github@eqbridges.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
docopt = "^0.6.2"
plaid-python = "^7.2.0"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
wheel = "^0.36.1"
twine = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
