[tool.poetry]
name = "plaid2qif"
version = "1.4.0"
description = "Download financial transactions from Plaid as QIF files."
authors = ["Edward Q. Bridges <github@eqbridges.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ebridges/plaid2qif"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Home Automation",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9"
docopt = "^0.6.2"
plaid-python = "^9.4.0"
python-dateutil = "^2.8.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
wheel = "^0.38.1"
twine = "^4.0.1"
Flask = "^2.1.2"

[tool.poetry.scripts]
plaid2qif = 'plaid2qif.plaid2qif:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
